@@ -271,6 +271,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 5952) Improvement to German localisation (de)
 * Rename conflicting metadata help message to "metadata_help" (was "metadata")
   and treat it as wiki text
+* Improve preferences input filtering
+
 
 == Compatibility ==
 
